# Zesty-Keep

./: .env  .gitignore  README.md  app.py  auth.py  example.env  gen_master_token.py  main.py  pyproject.toml  ss.py  test.py
database/: database.py  vocabulary.db
utils/: gen_vocabulary.py  logger.py  new_vocabulary.py  note_manager.py  reset_new_vocabulary.py
